# gpustack-installer

./: .gitignore  Distribution.xml  Distribution.xml.tmpl  GPUStack.icns  Makefile  README.md  app.icns  darwin.spec  pyproject.toml  windows.spec
.github/actions/: copy-to-cos.yaml
.github/actions/copy-to-cos/: action.yaml
.github/workflows/: ci-common.yaml  ci.yaml  not-tag.yaml  pr.yaml  tag.yaml
gpustack_helper/: admin_prompt_win.py  binary_entrypoint.py  common.py  config.py  databinder.py  defaults.py  download_nssm.py  icon.py  main.py  status.py  tools.py
gpustack_helper/quickconfig/: common.py  dialog.py  envvar.py  general.py
gpustack_helper/services/: abstract_service.py  darwin.py  factory.py  windows.py
gpustackhelper/: common.py  config.py  databinder.py  defaults.py  icon.py  main.py  quickconfig.py  status.py
gpustackhelper/quickconfig/: common.py  dialog.py  envvar.py  general.py
hack/: build.sh  ci.sh  export_version.sh  install.sh  lint.sh  package.sh
hack/lib/: version.sh
