[tool.poetry]
name = "gpustack-helper"
version = "0.0.0"
description = "The GPUStack Installer is a helper tool for installing and configuring GPUStack."
authors = ["GPUStack Authors <contact@gpustack.ai>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
# gpustack = { version = "0.6.2", extras = ["audio"] }
gpustack = { git = "https://github.com/gpustack/gpustack.git", branch = "main", extras = ["audio"] }

PySide6-Essentials="~6.8"
platformdirs = "^4.3.8"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.13.0"
poetry-dynamic-versioning = "^1.8.2"
pre-commit = "^4.2.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
helper = "gpustack_helper.main:main"

[tool.poetry-dynamic-versioning]
enable = true

[tool.black]
line-length = 88
target-version = ['py310']
skip-string-normalization = true
